Added mobile header functionality

--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
       <title>Cyber Security Demo</title>
       <link rel="stylesheet" href="css/style.css">
       <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
       <header>
         <div class="nav-logo">
-          <img src="img/Cyber.png" alt="logo">
-          <h1>cybersafe</h1>
+          <a href="#">
+            <img src="img/Cyber.png" alt="logo">
+            <h1>cybersafe</h1>
+          </a>
         </div>
-        <nav>
-          <a href="#">Home</a>
+        <nav id="menu-links">
           <a href="#sec-3">About</a>
           <a href="#sec-4">Gallery</a>
           <a href="#sec-7">Contact Us</a>
         </nav>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
       </header>
       <div class="landing">
         <div class="img-overlay"></div>
@@ -128,5 +133,6 @@
           </a>
         </div>
       </footer>
+      <script src="script.js"></script>
     </body>
   </html>
